# clipdude

./: .env  .prettierignore  .prettierrc  README copy.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ClipItem.tsx  GroupAccordion.tsx  Navbar.tsx
src/components/ui/: Accordion.tsx  Button.tsx  accordion.tsx  alert-dialog.tsx  separator.tsx  tabs.tsx
src/hooks/: useClipboard.ts
src/pages/: MonitorPage.tsx  Settings.tsx
